# human-plus-plus

./: .gitignore  CHANGELOG.md  Makefile  README.md  analyze.py  apply.sh  base-cool-balanced-v2.json  base.json  build.py  colortest.sh  human++.yaml  human-plus-plus.yaml  index.html  palette.toml  preview.sh  propose.py  pyproject.toml  swatches.html
.github/workflows/: ci.yml  pages.yml  release.yml
borders/: bordersrc
ghostty/: config
iterm/: humanplusplus.itermcolors
scripts/: apply.sh  preview.sh
shell/: base24-human-plus-plus.sh
sketchybar/: colors.sh
skhd/: modes.sh
templates/: README.md.tmpl
templates/site/: index.html.tmpl
templates/vscode/: human-plus-plus.json.tmpl  theme.json.tmpl
tools/: analyze.py  build.py  create_vscode_template.py  derive_base24.py  propose.py  sync-changelog.py
tools/lib/: __init__.py  colors.py  palette.py  render.py
vim/colors/: humanplusplus.vim  neo-noir.vim
vscode-extension/: .vscodeignore  LICENSE  package.json  tsconfig.json
vscode-extension/src/: extension.ts
vscode-extension/themes/: humanpp-cool-balanced.json
