[project]
name = "humanplusplus"
version = "1.0.0"
description = "Human++ - A Base24 color scheme for the post-artisanal coding era"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "fielding"}
]
keywords = ["color-scheme", "base24", "base16", "theme", "syntax-highlighting"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Editors",
    "Topic :: Utilities",
]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/fielding/human-plus-plus"
Repository = "https://github.com/fielding/human-plus-plus"
Documentation = "https://fielding.github.io/human-plus-plus/"

[project.scripts]
human-plus-plus-build = "build:main"
human-plus-plus-analyze = "analyze:main"
human-plus-plus-propose = "propose:main"
human-plus-plus-derive = "derive_base24:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["build", "analyze", "propose", "derive_base24"]
